Fixed dropdown z-index

--- a/web/resources/styles/annotations.css
+++ b/web/resources/styles/annotations.css
@@ -228,7 +228,7 @@ h1 {
     min-width: 130px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 4;
     right: 0;
 }
 
